[package]
edition = "2021"
name = "pallet-prepaid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}
scale-info = {default-features = false, features = ['derive'], version = '2.0.1'}

frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

orml-traits = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false, branch = "polkadot-v0.9.42"}
traits = {version = "0.1.0", path = "../traits", default-features = false}

[dev-dependencies]
orml-tokens = {git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = "polkadot-v0.9.42"}
primitives = {path = "../../primitives"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}
sp-io = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.42"}

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "orml-traits/std",
  "traits/std",
]
