[package]
edition = "2021"
name = "pallet-rando-precompile"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "2.2.0", default-features = false}
evm = {version = "0.33.0", default-features = false}
fp-evm = {default-features = false, git = 'https://github.com/ultrastable-money/frontier.git', branch = "master"}
frame-support = {default-features = false, git = 'https://github.com/ultrastable-money/substrate.git', tag = 'monthly-2021-11-1', version = '4.0.0-dev'}
frame-system = {default-features = false, git = 'https://github.com/ultrastable-money/substrate.git', tag = 'monthly-2021-11-1', version = '4.0.0-dev'}
num_enum = {version = '0.5.3', default-features = false}
pallet-evm = {default-features = false, git = 'https://github.com/ultrastable-money/frontier.git', branch = "master"}
pallet-rando = {path = "../../pallets/rando", default-features = false}
precompile-utils = {path = "../utils", default-features = false}

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-evm/std",
  "evm/std",
  "pallet-rando/std",
  "fp-evm/std",
  "num_enum/std",
]
