[package]
authors = ["PureStake"]
description = "Utils to write EVM precompiles."
edition = "2018"
name = "precompile-utils"
version = "0.1.0"

[dependencies]
log = "0.4"
num_enum = {version = "0.5.3", default-features = false}
sha3 = {version = "0.9", default-features = false}

# Moonbeam
precompile-utils-macro = {path = "macro"}

# Substrate
codec = {package = "parity-scale-codec", version = "2.2", default-features = false}
frame-support = {git = "https://github.com/ultrastable-money/substrate", tag = 'monthly-2021-11-1', version = "4.0.0-dev", default-features = false}
frame-system = {git = "https://github.com/ultrastable-money/substrate", tag = 'monthly-2021-11-1', default-features = false, version = "4.0.0-dev"}
sp-core = {git = "https://github.com/ultrastable-money/substrate", tag = 'monthly-2021-11-1', default-features = false, version = "4.0.0-dev"}
sp-io = {git = "https://github.com/ultrastable-money/substrate", tag = 'monthly-2021-11-1', default-features = false, version = "4.0.0-dev"}
sp-std = {git = "https://github.com/ultrastable-money/substrate", tag = 'monthly-2021-11-1', default-features = false, version = "4.0.0-dev"}

# Frontier
fp-evm = {git = "https://github.com/ultrastable-money/frontier", branch = "master", default-features = false}
pallet-evm = {git = "https://github.com/ultrastable-money/frontier", branch = "master", default-features = false}

# Polkadot / XCM
xcm = {git = "https://github.com/paritytech/polkadot", default-features = false}

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
  "codec/std",
  "fp-evm/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-evm/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
]
