[package]
name = "pallet-evm-compat-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum = { version = "0.12.0", default-features = false}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27"}
sp-core = {git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.27", default-features = false}
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.0.0'}

[features]
default = ["std"]
std = [
    "frame-support/std",
    "ethereum/std",
    "sp-core/std",
    "codec/std"
]
